update db into backend